updated Elasticsearch GC and heap memory for 8GB playbox